--- a/slug-health/popup.html
+++ b/slug-health/popup.html
@@ -3,10 +3,11 @@
 
 	<head>
 		<title>Slug Health</title>
+		<link rel="stylesheet" href="popup.css" />
 	</head>
 	<body>
 		<h1>Slug Health</h1>
-		<button id="checkPage">Check this page now!</button>
+		<button id="checkPage">Check this page now</button>
 	</body>
 
 </html>
