--- a/slug-health/popup.html
+++ b/slug-health/popup.html
@@ -4,6 +4,8 @@
 	<head>
 		<title>Slug Health</title>
 		<link rel="stylesheet" href="popup.css" />
+		<script src="/alert.js"></script>
+		
 	</head>
 	<body>
 		<h1>Slug Health</h1>
