angry slug added

--- a/slug-health/popup.html
+++ b/slug-health/popup.html
@@ -10,6 +10,14 @@
 	<body>
 		<h1>Slug Health</h1>
 		<button id="checkPage">Check this page now</button>
+        <form>
+            <select id="mySelect" size="4">
+              <option>Apple</option>
+              <option>Orange</option>
+              <option>Pineapple</option>
+              <option>Banana</option>
+            </select>
+        </form>
 	</body>
 
 </html>
